--- a/debs/krb5/debian/changelog
+++ b/debs/krb5/debian/changelog
@@ -1,3 +1,9 @@
+krb5 (1.17-2+puavo1) unstable; urgency=medium
+
+  * Added a patch to increase maximum number of realms.
+
+ -- Puavo Org <dev@opinsys.fi>  Mon, 25 Mar 2019 10:51:10 +0200
+
 krb5 (1.17-2) unstable; urgency=medium
 
   * Finish removing the run kadmind debconf template which was obsoleted
