Increment puavo-os version.  Just use some number, this is not meaningful in any way and not tied to any commit in VCS. Intended to stay the same for a long time.

--- a/debs/puavo-os/debian/changelog
+++ b/debs/puavo-os/debian/changelog
@@ -1,3 +1,9 @@
+puavo-os (0.34.0) stretch; urgency=medium
+
+  * New puavo-os version.
+
+ -- Puavo Org <dev@opinsys.fi>  Mon, 14 Aug 2017 10:29:15 +0300
+
 puavo-os (0.33.0~rc3+b68cfa9b9e3a997aee8de8e52a6427c5e9a99149) trusty; urgency=medium
 
   * Git(b68cfa9b9e3a997aee8de8e52a6427c5e9a99149)
