Use +puavo1 instead of +opinsys1 as grub version suffix.

--- a/debs/grub2/debian/changelog
+++ b/debs/grub2/debian/changelog
@@ -1,4 +1,4 @@
-grub2 (2.02~beta3-5+opinsys1) UNRELEASED; urgency=medium
+grub2 (2.02~beta3-5+puavo1) UNRELEASED; urgency=medium
 
   * Fix sparsefile support on compressed squashfs.
 
