--- a/debs/wine/debian/changelog
+++ b/debs/wine/debian/changelog
@@ -1,3 +1,9 @@
+wine (4.0-1+puavo1+buildonce) buster; urgency=medium
+
+  * Add puavo-support-ata-id.patch.
+
+ -- Puavo Org <dev@opinsys.fi>  Tue, 16 Apr 2019 12:46:02 +0300
+
 wine (4.0-1) unstable; urgency=medium
 
   * New upstream release 4.0, released Jan 22, 2019.
