--- a/debs/wine/debian/changelog
+++ b/debs/wine/debian/changelog
@@ -1,3 +1,9 @@
+wine (2.0.2-1+puavo1+buildonce) unstable; urgency=medium
+
+  * Add puavo-support-ata-id.patch.
+
+ -- Puavo Org <dev@opinsys.fi>  Tue, 19 Sep 2017 10:26:48 +0300
+
 wine (2.0.2-1) unstable; urgency=medium
 
   [ Michael Gilbert ]
