--- a/debs/wpa/debian/changelog
+++ b/debs/wpa/debian/changelog
@@ -3,7 +3,7 @@ wpa (2:2.4-1+deb9u1+puavo1) stretch; urgency=medium
   * Add a patch to hostapd so that puavo-wlanap can support multiple
     networks.  Patch written by Petko Bordjukov <bordjukov at gmail.com>.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Wed, 01 Nov 2017 13:20:43 +0200
+ -- Puavo Org <dev@opinsys.fi>  Wed, 01 Nov 2017 13:20:43 +0200
 
 wpa (2:2.4-1+deb9u1) stretch-security; urgency=high
 
