--- a/debs/autopoweroff/debian/changelog
+++ b/debs/autopoweroff/debian/changelog
@@ -1,4 +1,4 @@
-autopoweroff (2.9.1-0+puavo1) stable; urgency=medium
+autopoweroff (2.9.1-0+puavo1) stretch; urgency=medium
 
   * Initial release.
 
