--- a/debs/gnome-shell/debian/changelog
+++ b/debs/gnome-shell/debian/changelog
@@ -1,8 +1,8 @@
-gnome-shell (3.22.3-2+puavo1) unstable; urgency=medium
+gnome-shell (3.22.3-2+puavo1) stretch; urgency=medium
 
   * Allow gnome-shell extensions in gdm mode.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Fri, 17 Mar 2017 08:36:50 +0200
+ -- Puavo Org <dev@opinsys.fi>  Fri, 17 Mar 2017 08:36:50 +0200
 
 gnome-shell (3.22.3-2) unstable; urgency=medium
 
