--- a/debs/grub2/debian/changelog
+++ b/debs/grub2/debian/changelog
@@ -1,8 +1,8 @@
-grub2 (2.02~beta3-5+puavo1) UNRELEASED; urgency=medium
+grub2 (2.02~beta3-5+puavo1) stretch; urgency=medium
 
   * Fix sparsefile support on compressed squashfs.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Fri, 04 Aug 2017 14:54:37 +0300
+ -- Puavo Org <dev@opinsys.fi>  Fri, 04 Aug 2017 14:54:37 +0300
 
 grub2 (2.02~beta3-5) unstable; urgency=medium
 
