--- a/debs/krb5/debian/changelog
+++ b/debs/krb5/debian/changelog
@@ -1,8 +1,8 @@
-krb5 (1.15-1+puavo1) unstable; urgency=medium
+krb5 (1.15-1+puavo1) stretch; urgency=medium
 
   * Added a patch to increase maximum number of realms.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Mon, 03 Jul 2017 15:53:27 +0300
+ -- Puavo Org <dev@opinsys.fi>  Mon, 03 Jul 2017 15:53:27 +0300
 
 krb5 (1.15-1) unstable; urgency=medium
 
