--- a/debs/nwjs/debian/changelog
+++ b/debs/nwjs/debian/changelog
@@ -1,14 +1,8 @@
-nwjs (0.14.7-0+puavo1) stable; urgency=medium
+nwjs (0.14.7-0+puavo1) stretch; urgency=medium
 
   * Try nwjs 0.14.7, maybe it works better for us.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Fri, 30 Sep 2016 15:02:43 +0300
-
-nwjs (0.17.5-0+puavo1) stable; urgency=medium
-
-  * Update node-webkit to nwjs (new version and name change).
-
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Thu, 29 Sep 2016 12:31:03 +0300
+ -- Puavo Org <dev@opinsys.fi>  Fri, 30 Sep 2016 15:02:43 +0300
 
 node-webkit (0.8.6-0+puavo1) stable; urgency=medium
 
