--- a/debs/openldap/debian/changelog
+++ b/debs/openldap/debian/changelog
@@ -1,8 +1,8 @@
-openldap (2.4.44-0+puavo1) unstable; urgency=medium
+openldap (2.4.44-0+puavo1) stretch; urgency=medium
 
   * With some patches by Opinsys.
 
- -- Juha Erkkilä <Juha.Erkkila@opinsys.fi>  Mon, 26 Jun 2017 08:28:42 +0300
+ -- Puavo Org <dev@opinsys.fi>  Mon, 26 Jun 2017 08:28:42 +0300
 
 openldap (2.4.44+dfsg-5) unstable; urgency=medium
 
