--- a/rules/README
+++ b/rules/README
@@ -125,6 +125,9 @@ lightdm
 locales
     Configure needed locales and language support.
 
+motd
+    Configurations to update the Message of the Day.
+
 network_manager
     Allow users to modify network manager connections, but clean them
     up so that those modifications are (normally) only temporary.
