Setup wine.desktop to where it belongs.

--- a/rules/README
+++ b/rules/README
@@ -197,6 +197,9 @@ wacom
 webmenu
     Our own branding for webmenu.
 
+wine
+    Configurations for wine.
+
 workaround_firefox_local_swf_bug
     Do workaround a mime-types related Firefox Shockwafe Flash -bug (with
     local swf-files only).
