Add blueman package and switch autostart off.

--- a/rules/README
+++ b/rules/README
@@ -7,6 +7,9 @@ autopoweroff
 backgrounds
     Some backgrounds for login screen and desktop.
 
+blueman
+    Remove autostart file for blueman.
+
 bigtouch
     Gnome 3 customizations for big touchscreens.
 
