Build openldap also to images, so that we get slapd that is linked with ssl instead of gnutls.  Must be built without timestamp in version string, because we need the 32-bit versions of this as well.
I do not properly remember the rationale for linking against ssl
instead of gnutls, but that is what we do on the cloud anyway,
and IIRC at least historically it had to do with stability issues
and possibly also slave synchronization problems.  The latter is
currently an issue on Debian bootservers, which I hope this will fix.

--- a/debs/openldap/debian/changelog
+++ b/debs/openldap/debian/changelog
@@ -1,4 +1,4 @@
-openldap (2.4.44-0+puavo1) stretch; urgency=medium
+openldap (2.4.44-0+puavo1+buildonce) stretch; urgency=medium
 
   * With some patches by Opinsys.
 
