Rename the puppet module "cups" --> "desktop_cups" to prevent confusion with upcoming "bootserver_cups"-module.

--- a/rules/README
+++ b/rules/README
@@ -27,11 +27,11 @@ citrix
 console
     Startup getty on a console device.
 
-cups
-    Configurations for cups.
-
 desktop
     Desktop settings.
+
+desktop_cups
+    Configurations for cups for desktop hosts.
 
 devilspie
     Special window management rules for devilspie.
