Apply a translation fix for Libreoffice (Finnish environment).

--- a/rules/libreoffice/files/sfx.po
+++ b/rules/libreoffice/files/sfx.po
@@ -1757,12 +1757,12 @@ msgstr "Käytä ODF-tiedostomuotoa, jos haluat olla varma, että asiakirja talle
 #: sfx2/uiconfig/ui/alienwarndialog.ui:25
 msgctxt "alienwarndialog|cancel"
 msgid "Use %DEFAULTEXTENSION _Format"
-msgstr "Käytä %DEFAULTEXTENSION-muotoa"
+msgstr "Käytä %DEFAULTEXTENSION-_muotoa"
 
 #: sfx2/uiconfig/ui/alienwarndialog.ui:41
 msgctxt "alienwarndialog|save"
 msgid "_Use %FORMATNAME Format"
-msgstr "Käytä %FORMATNAME-muotoa"
+msgstr "_Käytä %FORMATNAME-muotoa"
 
 #: sfx2/uiconfig/ui/alienwarndialog.ui:66
 msgctxt "alienwarndialog|ask"
