--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -97,10 +97,10 @@ msgstr ""
 " Järjestelmä myös uudelleenkäynnistetään operaation jälkeen."
 
 msgid "Check for updates"
-msgstr "Tarkista päivitettävyys"
+msgstr "Tarkista päivitykset"
 
 msgid "(Checking for updates.)"
-msgstr "(Tarkistetaan päivitettävyyttä.)"
+msgstr "(Tarkistetaan päivityksiä.)"
 
 msgid "Update"
 msgstr "Päivitä"
