Provide Finnish translations for puavo-desktop-applet content updates.

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -123,3 +123,12 @@ msgstr ""
 
 msgid "New system version"
 msgstr "Uusi järjestelmäversio"
+
+msgid "%s update to version %s has started."
+msgstr "%s-päivitys versioon %s on aloitettu."
+
+msgid "%s update to version %s has completed successfully."
+msgstr "%s-päivitys versioon %s onnistui."
+
+msgid "%s update to version %s has failed: %s"
+msgstr "%s-päivitys versioon %s epäonnistui: %s"
