Make it more clear what is the content version and when it is updating (menu text in puavo-desktop-applet).

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -137,3 +137,9 @@ msgstr " onnistui."
 
 msgid " has failed:"
 msgstr " epäonnistui:"
+
+msgid " version"
+msgstr "-versio"
+
+msgid "is updating"
+msgstr "on päivittymässä"
