--- a/debs/autopoweroff/debian/changelog
+++ b/debs/autopoweroff/debian/changelog
@@ -1,3 +1,9 @@
+autopoweroff (3.0.0-1+puavo1) stretch; urgency=medium
+
+  * Update to latest version.
+
+ -- Puavo Org <dev@opinsys.fi>  Fri, 14 Dec 2018 13:23:58 +0200
+
 autopoweroff (2.9.1-0+puavo1) stretch; urgency=medium
 
   * Initial release.
